[gd_scene load_steps=32 format=4 uid="uid://dingey6dpjkej"]

[ext_resource type="Script" uid="uid://1t5t3p33euih" path="res://scenes/game/input_handler.gd" id="1_0sr1o"]
[ext_resource type="Script" uid="uid://8ax6o7fu0x54" path="res://scenes/game/game.gd" id="1_lfrn8"]
[ext_resource type="Script" uid="uid://bnoc5hg1w680l" path="res://scenes/game/player_handler.gd" id="2_kelw5"]
[ext_resource type="Script" uid="uid://cqfajcehn1lmg" path="res://scenes/game/turn_handler.gd" id="3_5i0tg"]
[ext_resource type="Script" uid="uid://dps7gsaq81jcq" path="res://scenes/game/path_handler.gd" id="3_vaxfo"]
[ext_resource type="Script" uid="uid://fc0csa1y8d6n" path="res://scenes/game/fov_handler.gd" id="5_4j704"]
[ext_resource type="PackedScene" uid="uid://bttuda561ypyr" path="res://scenes/entities/player.tscn" id="6_2a8rs"]
[ext_resource type="Script" uid="uid://g8k58tdyw85l" path="res://scenes/game/map_handler.gd" id="6_kp23o"]
[ext_resource type="Script" uid="uid://c5n686xmwfcn" path="res://scenes/game/ui_layer.gd" id="7_87uf6"]
[ext_resource type="Texture2D" uid="uid://cqj1ovbkgru51" path="res://data/ui/buttons.png" id="7_bdhmt"]
[ext_resource type="TileSet" uid="uid://dq8df244qolxc" path="res://resources/tilesets/floor_tileset.tres" id="8_3xj4h"]
[ext_resource type="Script" uid="uid://ca65sgyd2r88t" path="res://scenes/game/camera.gd" id="8_87uf6"]
[ext_resource type="Material" uid="uid://qalf4xwagjbj" path="res://resources/materials/memory_material.tres" id="9_5jirj"]
[ext_resource type="TileSet" uid="uid://b008bqkq1qtp8" path="res://resources/tilesets/object_tileset.tres" id="9_5v6r0"]
[ext_resource type="PackedScene" uid="uid://ddq6ph76k280f" path="res://scenes/entities/ork.tscn" id="12_10c2w"]
[ext_resource type="Script" uid="uid://glhuh3cu4n43" path="res://scenes/game/background_layer.gd" id="12_ftsea"]
[ext_resource type="TileSet" uid="uid://c5noduvgdh1dj" path="res://resources/tilesets/fov_tileset.tres" id="12_uyinl"]
[ext_resource type="Script" uid="uid://c63e585ln32ti" path="res://scenes/game/effects.gd" id="14_5v6r0"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_87uf6"]
load_path = "res://.godot/imported/buttons.png-e3a6c642d55efb42b052cb7eb4ac4112.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_2a8rs"]
atlas = SubResource("CompressedTexture2D_87uf6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j704"]
atlas = ExtResource("7_bdhmt")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp23o"]
atlas = ExtResource("7_bdhmt")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jirj"]
atlas = ExtResource("7_bdhmt")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v6r0"]
atlas = ExtResource("7_bdhmt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyinl"]
atlas = ExtResource("7_bdhmt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_87uf6"]
atlas = ExtResource("7_bdhmt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdhmt"]
atlas = ExtResource("7_bdhmt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaxfo"]
atlas = ExtResource("7_bdhmt")
region = Rect2(0, 128, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftsea"]
atlas = ExtResource("7_bdhmt")
region = Rect2(96, 128, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otnwt"]
atlas = ExtResource("7_bdhmt")
region = Rect2(0, 160, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xj4h"]
atlas = ExtResource("7_bdhmt")
region = Rect2(96, 160, 96, 32)

[node name="game" type="Node"]
script = ExtResource("1_lfrn8")

[node name="map_handler" type="Node" parent="."]
script = ExtResource("6_kp23o")

[node name="path_handler" type="Node" parent="."]
script = ExtResource("3_vaxfo")

[node name="fov_handler" type="Node" parent="."]
script = ExtResource("5_4j704")

[node name="turn_handler" type="Node" parent="."]
script = ExtResource("3_5i0tg")

[node name="input_handler" type="Node" parent="."]
script = ExtResource("1_0sr1o")

[node name="player_handler" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("2_kelw5")
player = NodePath("../world/entities/player")

[node name="background_layer" type="CanvasLayer" parent="."]
layer = -1
script = ExtResource("12_ftsea")

[node name="background" type="ColorRect" parent="background_layer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0901961, 0.176471, 0.266667, 1)

[node name="world" type="Node2D" parent="."]

[node name="map" type="Node2D" parent="world"]

[node name="floor_layer" type="TileMapLayer" parent="world/map"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAABAA0AAAAAAAAAAAABAA4AAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAACAA0AAAAAAAAAAAACAA4AAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAADAA0AAAAAAAAAAAADAA4AAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAAwAAAAAAAAAAAAEAA0AAAAAAAAAAAAEAA4AAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAFAA0AAAAAAAAAAAAFAA4AAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAGAA0AAAAAAAAAAAAGAA4AAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAHAA0AAAAAAAAAAAAHAA4AAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAAAAAAIAA0AAAAAAAAAAAAIAA4AAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAAAAAAAAAKAA0AAAAAAAAAAAAKAA4AAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAALAAwAAAAAAAAAAAALAA0AAAAAAAAAAAALAA4AAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAAMAAwAAAAAAAAAAAAMAA0AAAAAAAAAAAAMAA4AAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAANAA0AAAAAAAAAAAANAA4AAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAAAAAAAAAAOAA0AAAAAAAAAAAAOAA4AAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAPAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAA=")
tile_set = ExtResource("8_3xj4h")

[node name="object_layer" type="TileMapLayer" parent="world/map"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAEAAAABAAAAAAAAAAEAAAACAAAAAAAAAAEAAAADAAAAAAAAAAEAAAAEAAAAAAAAAAEAAAAFAAAAAAAAAAEAAAAGAAAAAAAAAAEAAAAHAAAAAAAAAAEAAAAIAAAAAAAAAAEAAAAJAAAAAAAAAAEAAAAKAAAAAAAAAAEAAAALAAAAAAAAAAEAAAAMAAAAAAAAAAEAAAANAAAAAAAAAAEAAAAOAAAAAAAAAAEAAAAPAAAAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAEAAAAAAAgAAAAAAAEAAAAAAAkAAAAAAAEAAAAAAAoAAAAAAAEAAAAAAAsAAAAAAAEAAAAAAAwAAAAAAAEAAAAAAA0AAAAAAAEAAAAAAA4AAAAAAAEAAAABAA4AAAAAAAEAAAACAA4AAAAAAAEAAAADAA4AAAAAAAEAAAAEAA4AAAAAAAEAAAAFAA4AAAAAAAEAAAAGAA4AAAAAAAEAAAAHAA4AAAAAAAEAAAAIAA4AAAAAAAEAAAAJAA4AAAAAAAEAAAAKAA4AAAAAAAEAAAALAA4AAAAAAAEAAAAMAA4AAAAAAAEAAAANAA4AAAAAAAEAAAAOAA4AAAAAAAEAAAAPAA4AAAAAAAEAAAAPAA0AAAAAAAEAAAAPAAwAAAAAAAEAAAAPAAsAAAAAAAEAAAAPAAoAAAAAAAEAAAAPAAkAAAAAAAEAAAAPAAgAAAAAAAEAAAAPAAcAAAAAAAEAAAAPAAYAAAAAAAEAAAAPAAUAAAAAAAEAAAAPAAQAAAAAAAEAAAAPAAMAAAAAAAEAAAAPAAIAAAAAAAEAAAAPAAEAAAAAAAEAAAABAAgAAAAAAAEAAAACAAgAAAAAAAIAAAADAAgAAAAAAAEAAAAEAAgAAAAAAAEAAAAEAAkAAAAAAAEAAAAEAAoAAAAAAAEAAAAEAAsAAAAAAAEAAAAEAAwAAAAAAAEAAAAEAA0AAAAAAAEAAAAKAAsAAAAAAAEAAAALAAsAAAAAAAEAAAAMAAsAAAAAAAQAAAANAAsAAAAAAAEAAAAOAAsAAAAAAAEAAAAJAA0AAAAAAAEAAAAJAAwAAAAAAAEAAAAJAAsAAAAAAAEAAAA=")
tile_set = ExtResource("9_5v6r0")

[node name="items" type="Node2D" parent="world"]

[node name="entities" type="Node2D" parent="world"]

[node name="player" parent="world/entities" instance=ExtResource("6_2a8rs")]
position = Vector2(32, 32)
coords = Vector2i(1, 1)

[node name="ork" parent="world/entities" instance=ExtResource("12_10c2w")]
position = Vector2(64, 128)
coords = Vector2i(2, 4)

[node name="map_overlay" type="Node2D" parent="world"]

[node name="floor_memory_layer" type="TileMapLayer" parent="world/map_overlay"]
texture_filter = 1
material = ExtResource("9_5jirj")
tile_set = ExtResource("8_3xj4h")

[node name="object_memory_layer" type="TileMapLayer" parent="world/map_overlay"]
texture_filter = 1
material = ExtResource("9_5jirj")
tile_set = ExtResource("9_5v6r0")

[node name="fov_layer" type="TileMapLayer" parent="world/map_overlay"]
texture_filter = 1
tile_set = ExtResource("12_uyinl")

[node name="effects" type="Node2D" parent="world"]
script = ExtResource("14_5v6r0")

[node name="camera" type="Camera2D" parent="world"]
position = Vector2(352, 352)
offset = Vector2(16, 16)
script = ExtResource("8_87uf6")
real_factor = 1.0

[node name="ui_layer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("7_87uf6")

[node name="bottom_container" type="HBoxContainer" parent="ui_layer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="wait_button" type="TextureButton" parent="ui_layer/bottom_container"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_2a8rs")
texture_pressed = SubResource("AtlasTexture_4j704")
stretch_mode = 0

[node name="game_speed_button" type="TextureButton" parent="ui_layer/bottom_container"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_kp23o")
texture_pressed = SubResource("AtlasTexture_5jirj")
stretch_mode = 0

[node name="investigate_button" type="TextureButton" parent="ui_layer/bottom_container"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_5v6r0")
texture_pressed = SubResource("AtlasTexture_uyinl")
stretch_mode = 0

[node name="menu_button" type="TextureButton" parent="ui_layer"]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
texture_normal = SubResource("AtlasTexture_87uf6")
texture_pressed = SubResource("AtlasTexture_bdhmt")
stretch_mode = 0

[node name="menu_bg" type="ColorRect" parent="ui_layer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.127667, 0.2, 0.501961)

[node name="menu" type="NinePatchRect" parent="ui_layer"]
visible = false
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -44.0
offset_right = 56.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(56, 43.75)
texture = ExtResource("7_bdhmt")
region_rect = Rect2(0, 96, 32, 32)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="return_button" type="TextureButton" parent="ui_layer/menu"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 40.0
texture_normal = SubResource("AtlasTexture_vaxfo")
texture_pressed = SubResource("AtlasTexture_ftsea")

[node name="exit_button" type="TextureButton" parent="ui_layer/menu"]
layout_mode = 0
offset_left = 8.0
offset_top = 48.0
offset_right = 104.0
offset_bottom = 80.0
texture_normal = SubResource("AtlasTexture_otnwt")
texture_pressed = SubResource("AtlasTexture_3xj4h")

[connection signal="pressed" from="ui_layer/bottom_container/wait_button" to="ui_layer" method="_on_wait_button_pressed"]
[connection signal="pressed" from="ui_layer/bottom_container/game_speed_button" to="ui_layer" method="_on_game_speed_button_pressed"]
[connection signal="pressed" from="ui_layer/bottom_container/investigate_button" to="ui_layer" method="_on_investigate_button_pressed"]
[connection signal="pressed" from="ui_layer/menu_button" to="ui_layer" method="_on_menu_button_pressed"]
[connection signal="pressed" from="ui_layer/menu/return_button" to="ui_layer" method="_on_return_button_pressed"]
[connection signal="pressed" from="ui_layer/menu/exit_button" to="ui_layer" method="_on_exit_button_pressed"]
